Fixed legend clutter in the bottom when it does not fit in the container

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -642,12 +642,12 @@ div#PackedBubbles .footer {
     }
 }
 
-/* Histogram ---------------------------------------------------------------------------
+/* BarChart ---------------------------------------------------------------------------
 */
 
-div#Histogram g#bars text{
+div#BarChart g#bars text.barValue{
   text-anchor: middle;
-  font-weight: bold;
+  font-size: 0.8em;
 }
 
 /* Parallel coordinates -----------------------------------------------------------------
